--- a/src/contexts/a.css
+++ b/src/contexts/a.css
@@ -9,7 +9,10 @@ a {
 
 * {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    margin-left: 3px;
+}
+
+@media screen and (max-width: 1224px) {
+
 }
