--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,8 @@ textarea {
 input::placeholder,
 textarea::placeholder {
     font-family: "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+        font-size: 16px;
 }
 
 ul {
